# axum-diesel

./: .env  Cargo.toml  diesel.toml  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
migrations/2024-08-06-125118_first_init/: down.sql  up.sql
src/: config.rs  error.rs  lib.rs  main.rs  routes.rs  schema.rs
src/domain/models/: user.rs
src/handlers/: user_handler.rs
src/infra/db/: mod.rs
src/infra/repositories/: user_repository.rs
