[package]
name = "axum-diesel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
diesel = { version = "2.2.2", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.11.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
